# pointclouds

./: .gitignore  Cargo.toml  README.md
src/: main.rs  material.rs  object.rs  passes.rs  points_pass.rs  shader.wgsl  shader2.wgsl  texture_store.rs
src/pass/: blit.rs  jumpflood.rs  mod.rs  points_pass.rs  recolor.rs
src/shaders/: blit.wgsl  jumpflood.wgsl  point.wgsl  recolor.wgsl
