[package]
name = "pointclouds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.19.1"
winit = "0.29.11"
env_logger = "0.11.2"
pollster = "0.2.4"
bytemuck = {version="1.14.3", features=["derive"]}
nalgebra = {version="0.32.4", features=["bytemuck", "macros"]}
las = "0.8.1"